--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.5",
     "next": "14.2.3",
     "react": "^18",
