--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.2.5",
     "next": "14.2.3",
     "react": "^18",
