--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@internationalized/date": "^3.7.0",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
     "@nextui-org/navbar": "^2.0.30",
